# ChessGrandMastersFootsteps

./: .gitignore  .mypy.ini  README.md  fichierFenAjour.fen  mkdocs.yml  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py
app/controllers/: game_controller.py
app/dossierPgn/: Beijing2013.pgn  Berlin2022-GP3.pgn  Bucharest2023.pgn  Chennai2024.pgn  London2015.pgn  Milan1975_1.pgn  Milan1975_2.pgn  Moscow2020.pgn  Paris2013.pgn  Riga2019.pgn  Stavanger2020.pgn  match.pgn
app/fen_saves/: 0671b2d3-714d-48f4-aa97-551a2fb644a6.fen  7c2d3e57-b54f-4bf5-9325-d5461883d4a9.fen  8dc14369-2a11-4fb5-ae31-c8d8d78db459.fen  aadbf9ca-66ad-4671-8f9f-8d7f6d5a2c62.fen  c7333c6c-76d1-4b8c-a8be-3cb615562be5.fen  e11dae5d-6daf-4de4-aff0-76a7572f745b.fen  e853b26e-af8b-4fe3-b601-300081d798e8.fen  fdecf928-a600-4570-a48a-515b83c433e6.fen
app/models/: game_model.py  game_model1min.py  game_model30sec.py  game_model3min.py  game_modelEasy.py  game_modelNormal.py  game_model_30sec.py
app/routes/: game_routes.py
app/services/: game_service.py
app/static/css/: deviner_prochain_coupCss.css  menuCss.css  rules.css  timer.css
app/templates/: deviner_prochaib_coup_normal.html  deviner_prochain_coup.html  deviner_prochain_coup_easy.html  deviner_prochain_coup_normal.html  game_timer_1min.html  game_timer_3min.html  game_timer_hard.html  menu.html  rules.html
app/utils/: engine_utils.py  fen_utils.py  pgn_utils.py  utils.py
app/views/: game_view.py
chess/: position.fen
chess/chess/: fichierFenAjour.fen  index.py  package-lock.json  pyproject.toml  server.py
chess/doc/: lancement.txt
docs/: index.md  run.md
fen_saves/: 1ea26706-0084-48d4-aae6-259a037894ea.fen  50f3597a-b5a6-4f14-9486-5727926f7368.fen  8dc14369-2a11-4fb5-ae31-c8d8d78db459.fen  f11bb216-4738-418f-a0e6-a3781e65055b.fen
site/: 404.html  index.html  objects.inv
site/run/: index.html
site/search/: search_index.json
tests/: test_game_model.py  test_game_model30sec.py
(+34 files in other folders)
