[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testchess"
version = "0.1.0"
description = "Chess Grand Masters Footsteps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flash>=1.0.3",
    "flask>=3.1.0",
    "jsonfy>=0.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "mypy>=1.15.0",
    "pip>=25.1",
    "pytest>=8.3.5",
    "python-chess>=1.999",
    "stockfish>=3.28.0",
]


[tool.setuptools]
packages = ["app", "fen_saves"]

